--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -3,21 +3,26 @@
     <div class="container">
       <div class="block-heading">
         <h2 class="text-info">Sobre nosotros</h2>
-        <p>
-          Te invitamos a conocer un poco sobre nosotros
-        </p>
+        <p>Te invitamos a conocer un poco sobre nosotros</p>
       </div>
 
-      <div class="row justify-content-center">
+      <div class="row justify-content-center animated zoomIn">
         <div class="col-sm-12 col-lg-8">
           <div class="card text-center clean-card">
-            <img
-              class="card-img-top w-100 d-block px-4"
-              src="assets/img/logos/logo.png"
-            />
+            <div class="a-brand-logo p-5">
+              <img src="./assets/img/logos/logo-st.png" alt="Agrofrost Logo" />
+              <div id="brand-logo-texto">
+                <div>Agrofrost</div>
+                <div id="eslogan">
+                  Conectando el agro <br />
+                  con el mundo
+                </div>
+              </div>
+            </div>
+
             <div class="card-body info">
-              <h4 class="card-title">Agrofrost</h4>
-              <p class="card-text">
+              <!-- <h2 class="card-title">Agrofrost</h2> -->
+              <p class="card-text p-5 pt-0">
                 Agrofrost S.A.S es la iniciativa que pretende proporcionar un
                 canal directo para incentivar la participación en el sector
                 agro, disminuyendo los eslabones en la cadena de producción y
@@ -26,29 +31,24 @@
                 concepción de un modelo de negocio donde los intermediarios no
                 sean los únicos que puedan exponer sus puntos de vista, si no
                 que sea una red de contactos donde se puedan dar a conocer y
-                generar alianzas. 
-                </p>
-                <p>
-                
-                Esta iniciativa se plantea como una
-                alternativa para fortalecer la agricultura, en el contexto de la
-                reactivación económica tras la emergencia de salud pública a
-                causa del COVID-19, teniendo como objetivo el bienestar de la
-                sociedad colombiana, especialmente a aquellos que no cuenta con
-                el apoyo del gobierno ni con los medios suficientes para
-                publicitar y comercializar sus productos y servicios.
+                generar alianzas.
               </p>
-              <div class="icons">
-                <a href="#"><i class="icon-social-facebook"></i></a
-                ><a href="#"><i class="icon-social-instagram"></i></a
-                ><a href="#"><i class="icon-social-twitter"></i></a>
-              </div>
+              <p class="card-text p-5 pt-0">
+                Esta iniciativa se plantea como una alternativa para fortalecer
+                la agricultura, en el contexto de la reactivación económica tras
+                la emergencia de salud pública a causa del COVID-19, teniendo
+                como objetivo el bienestar de la sociedad colombiana,
+                especialmente a aquellos que no cuenta con el apoyo del gobierno
+                ni con los medios suficientes para publicitar y comercializar
+                sus productos y servicios.
+              </p>
+              
             </div>
           </div>
         </div>
       </div>
       <div class="row justify-content-center mt-4">
-        <div class="col-sm-6 col-lg-4">
+        <div class="col-sm-6 col-lg-4 animated fadeInDown">
           <div class="card text-center clean-card">
             <img
               class="card-img-top w-100 d-block"
@@ -63,6 +63,7 @@
                 jefe'. El cual tiene la mayor autoridad en la jerarquía
                 operacional de una organización.
               </p>
+
               <div class="icons">
                 <a href="#"><i class="icon-social-facebook"></i></a
                 ><a href="#"><i class="icon-social-instagram"></i></a
@@ -71,7 +72,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-lg-4">
+        <div class="col-sm-6 col-lg-4 animated fadeInDown">
           <div class="card text-center clean-card">
             <img
               class="card-img-top w-100 d-block"
