--- a/src/app/pages/feautures/feautures.component.html
+++ b/src/app/pages/feautures/feautures.component.html
@@ -8,32 +8,44 @@
         </p>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-5 feature-box">
+        <div class="col-md-5 feature-box text-center">
           <i class="icon-star icon"></i>
           <h4>Publiación Gratuita</h4>
           <p>
             Podrás publicar de forma gratuita, los productos agrícolas que estes vendiendo, comprando o donde necesites algún tipo de contrato
           </p>
+          <p>
+            <i class="fas fa-search-dollar fa-10x text-center"></i>
+          </p>
         </div>
-        <div class="col-md-5 feature-box">
+        <div class="col-md-5 feature-box text-center">
           <i class="icon-pencil icon"></i>
           <h4>Sin intermediarios</h4>
           <p>
             Ponte en contacto de forma directa con el usuario de la publicación  
           </p>
+          <p>
+            <i class="fas fa-people-arrows fa-10x"></i>
+          </p>
         </div>
-        <div class="col-md-5 feature-box">
+        <div class="col-md-5 feature-box text-center ">
           <i class="icon-screen-smartphone icon"></i>
           <h4>Al instante</h4>
           <p>
             Utilizamos tecnología de alta disponibilidad, por ello, tu publicación se vera al instante
           </p>
+          <p>
+            <i class="far fa-clock fa-10x"></i>
+          </p>
         </div>
-        <div class="col-md-5 feature-box">
+        <div class="col-md-5 feature-box text-center">
           <i class="icon-refresh icon"></i>
           <h4>Planes para aumentar tu visibilidad </h4>
           <p>
             Nuestros planes pueden mejorar la visibilidad de tu publicación
+          </p>
+          <p>
+            <i class="far fa-gem fa-10x"></i>
           </p>
         </div>
       </div>
