--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -206,36 +206,59 @@
                       [src]="post.imgs[0]"
                     />
 
-                    <div class="card-body info">
-                      <div class="card-title">
-                        <h3>
-                          {{ post.cultivo.cultivo }}
-                        </h3>
-                        <span class="small">
-                          {{ post.cultivo.grupo_de_cultivo }}
-                        </span>
-                      </div>
+                    <div class="card-body">
+                      <div class="info">
+                      <div class="card-title nombre-cultivo">
 
-                      <div class="precio">
-                        {{
-                          post.precio | currency: "COP":"symbol-narrow":"3.0-0"
-                        }}
-                        x Kg
-                      </div>
-                      <div class="cantidad">
-                        Cantidad Disponible: {{ post.cantidad }} kg
-                      </div>
-                      <div class="municipio">
-                        {{ post.ubicacion.municipio }}
+                          <h3>
+                            {{ post.cultivo.cultivo }}
+                          </h3>
+                          <span class="small">
+                            {{ post.cultivo.grupo_de_cultivo }}
+                          </span>
+                        </div>
+                        
+                        <div class="cantidad">
+                          <i class="fas fa-shopping-cart"></i>
+                          <strong> Disponible: </strong> {{ post.cantidad }} kg
+                        </div>
+                        
+                        <div class="caracteristicas my-3">
+                          <i  class="fas fa-shipping-fast"></i>
+                          <i *ngIf="post.transporte" class="fas fa-check"></i>
+                          <i *ngIf="!post.transporte" class="fas fa-ban"></i>
+
+                          <i  class="fas fa-leaf"></i>
+                          <i *ngIf="post.organico" class="fas fa-check"></i>
+                          <i *ngIf="!post.organico" class="fas fa-ban"></i>
+                        </div>
+
+                        <div class="end-card">
+                          <div class="precio">
+                            <i class="fas fa-tags"></i>
+                            {{
+                              post.precio
+                              | currency: "COP":"symbol-narrow":"3.0-0"
+                            }}
+                            x Kg
+                          </div>
+                          
+                          <div class="municipio">
+                            <span>
+                              {{ post.ubicacion.municipio }}
+                            </span>
+                            <i class="fas fa-map-marked-alt"></i>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="clean-product-item">
-                    <div class="image">
-                      <a href="#"
+                  </div>
+                  
+                  <div class="col-12 col-md-6 col-lg-4">
+                    <div class="clean-product-item">
+                      <div class="image">
+                        <a href="#"
                         ><img
                           class="img-fluid d-block mx-auto"
                           src="assets/img/tech/image2.jpg" /></a
@@ -262,8 +285,9 @@
                 <ul class="pagination">
                   <li class="page-item disabled">
                     <a class="page-link" href="#" aria-label="Previous"
-                      ><span aria-hidden="true">«</span></a
-                    >
+                      ><span aria-hidden="true"
+                        ><i class="fas fa-angle-double-left"></i></span
+                    ></a>
                   </li>
                   <li class="page-item active">
                     <a class="page-link" href="#">1</a>
@@ -272,8 +296,9 @@
                   <li class="page-item"><a class="page-link" href="#">3</a></li>
                   <li class="page-item">
                     <a class="page-link" href="#" aria-label="Next"
-                      ><span aria-hidden="true">»</span></a
-                    >
+                      ><span aria-hidden="true"
+                        ><i class="fas fa-angle-double-right"></i></span
+                    ></a>
                   </li>
                 </ul>
               </nav>
@@ -284,8 +309,3 @@
     </div>
   </section>
 </main>
-
-
-
-
-
