--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -3,86 +3,96 @@
     <div class="container">
       <div class="block-heading">
         <h2 class="text-info">Planes</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-          urna, dignissim nec auctor in, mattis vitae leo.
-        </p>
+        <p>Conoce nuestros planes, con ellos podras mejorar tu visibilidad</p>
       </div>
       <div class="row justify-content-center">
         <div class="col-md-5 col-lg-4">
-          <div class="clean-pricing-item">
+          <div class="clean-pricing-item plan">
             <div class="heading">
-              <h3>No tengo prisa</h3>
+              <h3>Basico</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>
+              Ideal cuando se esta planificando las cosechas, <br />
+              "No tengo prisa"
+            </p>
             <div class="features">
               <h4>
-                <span class="feature">Full Support:&nbsp;</span><span>No</span>
+                <span class="feature"> Primeros puestos: </span><span>No</span>
               </h4>
               <h4>
-                <span class="feature">Duration:&nbsp;</span><span>30 Days</span>
+                <span class="feature">Duración :&nbsp;</span><span>7 Dias</span>
               </h4>
               <h4>
-                <span class="feature">Storage:&nbsp;</span><span>10GB</span>
+                <span class="feature">Anuncios maximos:&nbsp;</span
+                ><span>2</span>
               </h4>
             </div>
             <div class="price">
-              <h4>$25 cop</h4>
+              <h4>$25.000 COP</h4>
             </div>
             <button class="btn btn-outline-primary d-block w-100" type="button">
-              BUY NOW
+              Comprar
             </button>
           </div>
         </div>
         <div class="col-md-5 col-lg-4">
-          <div class="clean-pricing-item">
-            <div class="ribbon"><span>Best Value</span></div>
+          <div class="clean-pricing-item plan">
+            <div class="ribbon"><span>Más comprando</span></div>
             <div class="heading">
-              <h3>PRO</h3>
+              <h3>Producción media</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>
+              Quieres que tu anuncio destaque, ideal cuando se requiere hacer
+              negocio a corto tiempo
+            </p>
             <div class="features">
               <h4>
-                <span class="feature">Full Support:&nbsp;</span><span>Yes</span>
+                <span class="feature">Primeros puestos:&nbsp;</span
+                ><span>Si</span>
               </h4>
               <h4>
-                <span class="feature">Duration:&nbsp;</span><span>60 Days</span>
+                <span class="feature">Duracion: &nbsp;</span><span>7 Dias</span>
               </h4>
               <h4>
-                <span class="feature">Storage:&nbsp;</span><span>50GB</span>
+                <span class="feature">Anuncios maximos:&nbsp;</span
+                ><span>3</span>
               </h4>
             </div>
             <div class="price">
-              <h4>$50</h4>
+              <h4>$75.000 COP</h4>
             </div>
             <button class="btn btn-primary d-block w-100" type="button">
-              BUY NOW
+              Comprar
             </button>
           </div>
         </div>
         <div class="col-md-5 col-lg-4">
-          <div class="clean-pricing-item">
+          <div class="clean-pricing-item plan">
             <div class="heading">
-              <h3>PREMIUM</h3>
+              <h3>Grandes productores / empresas</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>
+
+              Es importante para tu negocio tener aliados comerciales
+            </p>
             <div class="features">
               <h4>
-                <span class="feature">Full Support:&nbsp;</span><span>Yes</span>
+                <span class="feature">Primeros puestos:&nbsp;</span
+                ><span>Si</span>
               </h4>
               <h4>
-                <span class="feature">Duration:&nbsp;</span
-                ><span>120 Days</span>
+                <span class="feature">Duracion:&nbsp;</span><span>7 Dias</span>
               </h4>
               <h4>
-                <span class="feature">Storage:&nbsp;</span><span>150GB</span>
+                <span class="feature">Anuncios Maximos:&nbsp;</span
+                ><span>10</span>
               </h4>
             </div>
             <div class="price">
-              <h4>$150</h4>
+              <h4>$150.000 COP</h4>
             </div>
             <button class="btn btn-outline-primary d-block w-100" type="button">
-              BUY NOW
+              Comprar
             </button>
           </div>
         </div>
