--- a/src/app/private-pages/user/user.component.html
+++ b/src/app/private-pages/user/user.component.html
@@ -1,32 +1,116 @@
 <main class="page mt-4 pt-4">
-    <section class="clean-block clean-form dark">
-
-    <!-- Three columns of text below the carousel -->
+  <section class="clean-block clean-form dark">
     <div class="row mt-4 pt-4">
       <div class="col-sm-12 col-lg-4 text-center opcion">
-        <img class="rounded-circle" src="../../../assets/img/iconos/usuario.png" >
+        <img
+          class="rounded-circle"
+          src="../../../assets/img/iconos/usuario.png"
+        />
 
-        <h2> Perfil</h2>
-        <p>Ingresa y modifica tu información basisca y de contacto</p>
-        <p><a class="btn btn-secondary" [routerLink]="'/posts'">Actualizar información</a></p>
+        <h2>Tu información</h2>
+        <p class="descripcion">
+          <span>Ingresa y modifica tu información basisca y de contacto</span>
+        </p>
+        <p>
+          <a class="btn btn-secondary" [routerLink]="'/posts'"
+            >Actualizar información</a
+          >
+        </p>
       </div>
+
       <div class="col-sm-12 col-lg-4 text-center opcion">
-          <img class="rounded-circle" src="../../../assets/img/iconos/curriculum.png" >
-          
-          <h2>Tus  publicaciones</h2>
-          <p>Aqui podras ver, actualizar y eliminar las ofertas y demandas de productos agricolas que hallas realizado</p>
-          <p><a class="btn btn-secondary" [routerLink]="'/posts'">Administrar publicaciones »</a></p>
-        </div>
-        <div class="col-sm-12 col-lg-4 text-center opcion">
-        <img class="rounded-circle" src="../../../assets/img/iconos/buscar.png   " >
+        <img
+          class="rounded-circle"
+          src="../../../assets/img/iconos/add.png"
+        />
+
+        <h2>Crear publicación</h2>
+        <p class="descripcion">
+          <span
+            >Aqui podras crear nuevas publicaciones</span
+          >
+        </p>
+        <p>
+          <a class="btn btn-secondary" [routerLink]="'/p/create-post'"
+            >Crear »</a
+          >
+        </p>
+      </div>
+   
+      <div class="col-sm-12 col-lg-4 text-center opcion">
+        <img
+          class="rounded-circle"
+          src="../../../assets/img/iconos/curriculum.png"
+        />
+
+        <h2>Tus publicaciones</h2>
+        <p class="descripcion">
+          <span
+            >Aqui podras ver, actualizar y eliminar las ofertas y demandas de
+            productos agricolas que hallas realizado</span
+          >
+        </p>
+        <p>
+          <a class="btn btn-secondary" [routerLink]="'/posts'"
+            >Administrar publicaciones »</a
+          >
+        </p>
+      </div>
+    </div>
+
+    <hr class="my-5" />
+    <div class="row pt-4">
+      <div class="col-sm-12 col-lg-4 text-center opcion">
+        <img
+          class="rounded-circle"
+          src="../../../assets/img/iconos/buscar.png   "
+        />
 
         <h2>Compra</h2>
-        <p>Ve las ofertas que otros usarios tienene para ti</p>
-        <p><a class="btn btn-secondary" [routerLink]="'/posts'" >Ver ofertas »</a></p>
+        <p class="descripcion">
+          Ve las ofertas que otros usarios tienene para ti
+        </p>
+        <p>
+          <a class="btn btn-secondary" [routerLink]="'/posts'">Ver ofertas »</a>
+        </p>
       </div>
-    
-    </div><!-- /.row -->
 
+      <div class="col-sm-12 col-lg-4 text-center opcion">
+        <img class="rounded-circle" src="../../../assets/img/iconos/help.png" />
 
-    </section>
+        <h2>Mesa de ayuda</h2>
+        <p class="descripcion">
+          <span
+            >¿Necesitas ayuda? ¿Tienes preguntas, sugerencias, denuncias o
+            reclamos</span
+          >
+        </p>
+        <p>
+          <a class="btn btn-secondary" [routerLink]="'/contactus'"
+            >Solicita ayuda</a
+          >
+        </p>
+      </div>
+      <div class="col-sm-12 col-lg-4 text-center opcion">
+        <img
+          class="rounded-circle"
+          src="../../../assets/img/iconos/pricing.png"
+        />
+
+        <h2>Planes y precios</h2>
+        <p class="descripcion">
+          <span
+            >Conoce nuestros planes, te ayudaran a dar una mayor visibilidad a
+            tus publicaciones</span
+          >
+        </p>
+        <p>
+          <a class="btn btn-secondary" [routerLink]="'/pricing'"
+            >Conocer planes »</a
+          >
+        </p>
+      </div>
+    </div>
+    <!-- /.row -->
+  </section>
 </main>
