--- a/src/app/components-layout/navbar/navbar.component.html
+++ b/src/app/components-layout/navbar/navbar.component.html
@@ -60,7 +60,7 @@
                   btn
                   text-white
                 "
-                [routerLink]="'/singin'"
+                [routerLink]="'/auth/singin'"
               >
                 Iniciar Sesión
               </a>
