add  shopping card page create  slider component improve detail post

--- a/src/app/components-layout/navbar/navbar.component.html
+++ b/src/app/components-layout/navbar/navbar.component.html
@@ -60,7 +60,7 @@
                   btn
                   text-white
                 "
-                [routerLink]="'/auth/singin'"
+                [routerLink]="'/singin'"
               >
                 Iniciar Sesión
               </a>
@@ -87,7 +87,7 @@
               <a
                 class="nav-link"
                 aria-current="page"
-                [routerLink]="'/p'"
+                [routerLink]="'/private'"
                 [routerLinkActive]="'active'"
                 >Perfil <i class="fas fa-user-circle"></i
               ></a>
