--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,6 +19,6 @@
 <a [routerLink]="['/tets']" routerLinkActive="router-link-active" >Componente Prueba</a>
 
 
-  <app-deals></app-deals>
+  <!-- <app-deals></app-deals>  FIXME: usar servicio y mostar podrutos detatacads dv  -->
   
 </main>
