--- a/src/app/private-pages/dashboard/dashboard.component.html
+++ b/src/app/private-pages/dashboard/dashboard.component.html
@@ -1,6 +1,3 @@
-<p>
-  dashboard works!
-</p>
 <main class="page mt-4 pt-4">
   <section class="clean-block clean-form dark">
     <div class="row mt-4 pt-4">
@@ -34,7 +31,7 @@
           >
         </p>
         <p>
-          <a class="btn btn-secondary" [routerLink]="'/p/create-post'"
+          <a class="btn btn-secondary" [routerLink]="'/posts/create'"
             >Crear »</a
           >
         </p>
