--- a/src/app/components-shared/deals/deals.component.html
+++ b/src/app/components-shared/deals/deals.component.html
@@ -6,23 +6,29 @@
       </div>
 
       <!-- Ofertas -->
+
+
       <div class="row align-items-center" *ngFor="let oferta of ofertas">
         <div class="col-md-6">
-          <img class="img-thumbnail" src="{{ oferta.imagen }}" />
+          <img class="img-thumbnail" src="{{ oferta.imgs[0] }}" />
         </div>
         <div class="col-md-6">
-          <h3>{{ oferta.titulo }}</h3>
+          <!-- <h3>{{ oferta.cultivo | cultivoPipe }}</h3> -->
+          <h3>{{ oferta.cultivo_info.cultivo}}</h3>
+          <h4> </h4>
+
+
           <div class="getting-started-info">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem
-              ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
+              {{oferta.descripcion}}
             </p>
           </div>
           <button class="btn btn-outline-primary btn-lg" type="button">
-            Join Now
+            Ver
           </button>
         </div>
       </div>
+
     </div>
+
 </section>
