--- a/src/app/components-shared/slider/slider.component.html
+++ b/src/app/components-shared/slider/slider.component.html
@@ -1,62 +1,43 @@
-<section class="clean-block slider dark">
-    <div class="container">
-      <div class="block-heading">
-        <h2 class="text-info">Slider</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam
-          urna, dignissim nec auctor in, mattis vitae leo.
-        </p>
+<section class="slider dark">
+  <div class="container">
+    <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
+      <div class="carousel-inner"
+    
+      >
+        <div
+          *ngFor="let img of imgs; index as idx"
+          class="carousel-item animated fadeIn faster "
+          [class.active]="idx == idxSlide"
+         
+        >
+          <img class="w-100 d-block" [src]="img" alt="idx" />
+        </div>
       </div>
-      <div class="carousel slide" data-bs-ride="carousel" id="carousel-1">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              class="w-100 d-block"
-              src="assets/img/scenery/image1.jpg"
-              alt="Slide Image"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              class="w-100 d-block"
-              src="assets/img/scenery/image4.jpg"
-              alt="Slide Image"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              class="w-100 d-block"
-              src="assets/img/scenery/image6.jpg"
-              alt="Slide Image"
-            />
-          </div>
-        </div>
-        <div>
-          <a
-            class="carousel-control-prev"
-            href="#carousel-1"
-            role="button"
-            data-bs-slide="prev"
-            ><span class="carousel-control-prev-icon"></span
-            ><span class="visually-hidden">Previous</span></a
-          ><a
-            class="carousel-control-next"
-            href="#carousel-1"
-            role="button"
-            data-bs-slide="next"
-            ><span class="carousel-control-next-icon"></span
-            ><span class="visually-hidden">Next</span></a
-          >
-        </div>
-        <ol class="carousel-indicators">
+
+      <div>
+        <a
+          class="carousel-control-prev"
+          (click)="prevSlide()"
+          data-bs-slide="prev"
+          *ngIf="idxSlide > 0"
+          ><span class="carousel-control-prev-icon"></span
+          ><span class="visually-hidden">Previous</span></a
+        ><a
+          *ngIf="idxSlide < imgs.length - 1"
+          class="carousel-control-next"
+          (click)="nextSlide()"
+          ><span class="carousel-control-next-icon"></span
+          ><span class="visually-hidden">Next</span></a
+        >
+      </div>
+      <ol class="carousel-indicators">
+        <ng-container *ngFor="let i of imgs; index as idxs">
           <li
             data-bs-target="#carousel-1"
-            data-bs-slide-to="0"
-            class="active"
+            (click)="changeTo(idxs)"
+            [class.active]="idxs == idxSlide"
           ></li>
-          <li data-bs-target="#carousel-1" data-bs-slide-to="1"></li>
-          <li data-bs-target="#carousel-1" data-bs-slide-to="2"></li>
-        </ol>
-      </div>
+        </ng-container>
+      </ol>
     </div>
-  </section>
+  </div>
