--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,5 +65,9 @@ main.page {
   //@extend .faster;
   --animate-duration: 0.1s;
   animation-duration: 0.5s;
+}
 
+
+.btn-primary{
+  @extend .text-white
 }
